typos and miscues